# mfw

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  README.md  config.py  mfw_set_file_copyright.py
app/fc-arm/: .cproject  (+4 more)
doc/: .copyright-exclude  cloc-exclude-list-file.txt  make_docu.sh  mfw.doxyfile
public/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  ads1115_8c.html  ads1115_8c.js  ads1115_8c_source.html  ads1115_8h.html  ads1115_8h.js  ads1115_8h_source.html  annotated.html  annotated_dup.js  bno055_8c.html  bno055_8c.js  bno055_8c_source.html  bno055_8h.html  bno055_8h.js  bno055_8h_source.html  circular__buffer_8c.html  circular__buffer_8c.js  circular__buffer_8c_source.html  cirular__buffer_8h.html  cirular__buffer_8h.js  cirular__buffer_8h_source.html  classes.html  crc16_8c.html  crc16_8c.js  crc16_8c_source.html  crc16_8h.html  crc16_8h.js  crc16_8h_source.html  create__version__header_8py.html  create__version__header_8py.js  create__version__header_8py_source.html  dir_270b4e82ca98b8b59aa4791d825b6dab.html  dir_270b4e82ca98b8b59aa4791d825b6dab.js  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_39309932fa5c6a0904f6923468e5e962.html  (+437 more)
submodules/betCOM/: CMakeLists.txt  README.md  Tupfile  Tuprules.tup  Versions.txt  find_versions.py
submodules/betCOM/c-nanopb/: README.md  Tupfile  nanopb_generator.py
submodules/betCOM/c-nanopb/proto/: Tupfile
submodules/betCOM/cpp/: Tupfile
submodules/betCOM/doc/: BetCOM.html  BetCOM.md  Makefile  README.md
submodules/betCOM/python/: Tupfile
(+310 files in other folders)
